test/error/ast/DeclarationNameDuplicate.mod
MODULE DeclarationNameDuplicate;
VAR a: INTEGER;
VAR a: INTEGER;
END DeclarationNameDuplicate.
